# continuity-stitch

./: LICENSE  pyproject.toml
continuity-stitch/: README.md
continuity-stitch/continuity_stitch/: core.py
continuity-stitch/continuity_stitch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
continuity_stitch/: __init__.py  exceptions.py  validator.py
